--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+/* Outfit
+Slate 300: hsl(212, 45%, 89%)
+- Slate 500: hsl(216, 15%, 48%)
+- Slate 900: hsl(218, 44%, 22%) */
+
+@theme{
+    --color-stale-300:hsl(212, 45%, 89%);
+    --color-stale-500:hsl(216, 15%, 48%);
+    --color-stale-900:hsl(218, 44%, 22%);
+}
+
+*{
+    font-family: :Outfit;
+}
